--- a/punt_model.ipynb
+++ b/punt_model.ipynb
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -185,7 +185,7 @@
        "[25845 rows x 5 columns]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -309,160 +309,79 @@
     "# Make predictions on new data\n",
     "new_data = [[80]]  # Example: yardline_100 = 80\n",
     "predicted_probabilities = rf_classifier.predict_proba(new_data)\n",
-    "print(\"Predicted Probabilities:\", predicted_probabilities)"
+    "print(\"Predicted Probabilities:\", predicted_probabilities)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_punts[df_punts['touchback']==1]\n",
+    "\n",
+    "\n",
+    "with open('punt_touchback_model.pkl', 'wb') as file:\n",
+    "    pickle.dump(rf_classifier, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ilanb/anaconda3/lib/python3.11/site-packages/sklearn/base.py:464: UserWarning: X does not have valid feature names, but RandomForestClassifier was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>yardline_100</th>\n",
-       "      <th>return_yards</th>\n",
-       "      <th>touchback</th>\n",
-       "      <th>kick_distance</th>\n",
-       "      <th>new_yardage</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>49.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>164</th>\n",
-       "      <td>59.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>243</th>\n",
-       "      <td>44.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>44.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>358</th>\n",
-       "      <td>59.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>59.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>614</th>\n",
-       "      <td>49.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>528206</th>\n",
-       "      <td>48.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>529133</th>\n",
-       "      <td>49.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>529208</th>\n",
-       "      <td>66.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>66.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>529463</th>\n",
-       "      <td>74.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>74.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>529623</th>\n",
-       "      <td>55.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>80.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>1756 rows × 5 columns</p>\n",
-       "</div>"
-      ],
       "text/plain": [
-       "        yardline_100  return_yards  touchback  kick_distance  new_yardage\n",
-       "10              49.0           0.0        1.0           49.0         80.0\n",
-       "164             59.0           0.0        1.0           59.0         80.0\n",
-       "243             44.0           0.0        1.0           44.0         80.0\n",
-       "358             59.0           0.0        1.0           59.0         80.0\n",
-       "614             49.0           0.0        1.0           49.0         80.0\n",
-       "...              ...           ...        ...            ...          ...\n",
-       "528206          48.0           0.0        1.0           48.0         80.0\n",
-       "529133          49.0           0.0        1.0           49.0         80.0\n",
-       "529208          66.0           0.0        1.0           66.0         80.0\n",
-       "529463          74.0           0.0        1.0           74.0         80.0\n",
-       "529623          55.0           0.0        1.0           55.0         80.0\n",
-       "\n",
-       "[1756 rows x 5 columns]"
+       "0.7166666666666667"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df_punts[df_punts['touchback']==1]"
+    "rf_classifier.predict_proba([[20]])[0][1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/ilanb/anaconda3/lib/python3.11/site-packages/sklearn/base.py:464: UserWarning: X does not have valid feature names, but RandomForestRegressor was fitted with feature names\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "78.6382404761905"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "rf_model.predict([[20]])[0]"
    ]
   },
   {
