--- a/go_for_it_model.ipynb
+++ b/go_for_it_model.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -87,7 +87,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -183,7 +183,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "with open('GFI_prediction_model.pkl','wb') as file:\n",
+    "    pickle.dump(rf_model,file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -191,106 +202,120 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/50\n",
-      "120/120 [==============================] - 0s 875us/step - loss: 0.6589 - accuracy: 0.5996 - val_loss: 0.6486 - val_accuracy: 0.6195\n",
+      "  1/120 [..............................] - ETA: 19s - loss: 0.7025 - accuracy: 0.5312"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-04-26 13:36:00.925984: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "120/120 [==============================] - 0s 1ms/step - loss: 0.6631 - accuracy: 0.6049 - val_loss: 0.6513 - val_accuracy: 0.6090\n",
       "Epoch 2/50\n",
-      "120/120 [==============================] - 0s 478us/step - loss: 0.6509 - accuracy: 0.6230 - val_loss: 0.6480 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 483us/step - loss: 0.6508 - accuracy: 0.6159 - val_loss: 0.6480 - val_accuracy: 0.6195\n",
       "Epoch 3/50\n",
-      "120/120 [==============================] - 0s 485us/step - loss: 0.6493 - accuracy: 0.6240 - val_loss: 0.6489 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 478us/step - loss: 0.6509 - accuracy: 0.6211 - val_loss: 0.6477 - val_accuracy: 0.6090\n",
       "Epoch 4/50\n",
-      "120/120 [==============================] - 0s 477us/step - loss: 0.6498 - accuracy: 0.6219 - val_loss: 0.6501 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 468us/step - loss: 0.6486 - accuracy: 0.6253 - val_loss: 0.6465 - val_accuracy: 0.6195\n",
       "Epoch 5/50\n",
-      "120/120 [==============================] - 0s 474us/step - loss: 0.6471 - accuracy: 0.6196 - val_loss: 0.6509 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 472us/step - loss: 0.6506 - accuracy: 0.6148 - val_loss: 0.6571 - val_accuracy: 0.6038\n",
       "Epoch 6/50\n",
-      "120/120 [==============================] - 0s 475us/step - loss: 0.6496 - accuracy: 0.6185 - val_loss: 0.6556 - val_accuracy: 0.6038\n",
+      "120/120 [==============================] - 0s 1ms/step - loss: 0.6493 - accuracy: 0.6224 - val_loss: 0.6459 - val_accuracy: 0.6195\n",
       "Epoch 7/50\n",
-      "120/120 [==============================] - 0s 559us/step - loss: 0.6469 - accuracy: 0.6256 - val_loss: 0.6515 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 547us/step - loss: 0.6467 - accuracy: 0.6172 - val_loss: 0.6496 - val_accuracy: 0.6090\n",
       "Epoch 8/50\n",
-      "120/120 [==============================] - 0s 484us/step - loss: 0.6475 - accuracy: 0.6227 - val_loss: 0.6482 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 471us/step - loss: 0.6474 - accuracy: 0.6185 - val_loss: 0.6505 - val_accuracy: 0.6090\n",
       "Epoch 9/50\n",
-      "120/120 [==============================] - 0s 482us/step - loss: 0.6472 - accuracy: 0.6217 - val_loss: 0.6543 - val_accuracy: 0.6038\n",
+      "120/120 [==============================] - 0s 467us/step - loss: 0.6475 - accuracy: 0.6206 - val_loss: 0.6452 - val_accuracy: 0.6195\n",
       "Epoch 10/50\n",
-      "120/120 [==============================] - 0s 482us/step - loss: 0.6480 - accuracy: 0.6125 - val_loss: 0.6478 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 466us/step - loss: 0.6485 - accuracy: 0.6287 - val_loss: 0.6615 - val_accuracy: 0.6038\n",
       "Epoch 11/50\n",
-      "120/120 [==============================] - 0s 485us/step - loss: 0.6510 - accuracy: 0.6198 - val_loss: 0.6467 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 463us/step - loss: 0.6470 - accuracy: 0.6206 - val_loss: 0.6449 - val_accuracy: 0.6195\n",
       "Epoch 12/50\n",
-      "120/120 [==============================] - 0s 471us/step - loss: 0.6466 - accuracy: 0.6209 - val_loss: 0.6461 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 469us/step - loss: 0.6456 - accuracy: 0.6219 - val_loss: 0.6445 - val_accuracy: 0.6195\n",
       "Epoch 13/50\n",
-      "120/120 [==============================] - 0s 477us/step - loss: 0.6478 - accuracy: 0.6203 - val_loss: 0.6505 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 1ms/step - loss: 0.6464 - accuracy: 0.6256 - val_loss: 0.6651 - val_accuracy: 0.5891\n",
       "Epoch 14/50\n",
-      "120/120 [==============================] - 0s 498us/step - loss: 0.6474 - accuracy: 0.6259 - val_loss: 0.6467 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 497us/step - loss: 0.6467 - accuracy: 0.6243 - val_loss: 0.6455 - val_accuracy: 0.6195\n",
       "Epoch 15/50\n",
-      "120/120 [==============================] - 0s 494us/step - loss: 0.6465 - accuracy: 0.6227 - val_loss: 0.6456 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 467us/step - loss: 0.6483 - accuracy: 0.6240 - val_loss: 0.6450 - val_accuracy: 0.6394\n",
       "Epoch 16/50\n",
-      "120/120 [==============================] - 0s 514us/step - loss: 0.6461 - accuracy: 0.6224 - val_loss: 0.6513 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 462us/step - loss: 0.6480 - accuracy: 0.6238 - val_loss: 0.6466 - val_accuracy: 0.6195\n",
       "Epoch 17/50\n",
-      "120/120 [==============================] - 0s 486us/step - loss: 0.6459 - accuracy: 0.6261 - val_loss: 0.6459 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 469us/step - loss: 0.6458 - accuracy: 0.6214 - val_loss: 0.6445 - val_accuracy: 0.6195\n",
       "Epoch 18/50\n",
-      "120/120 [==============================] - 0s 476us/step - loss: 0.6458 - accuracy: 0.6259 - val_loss: 0.6497 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 472us/step - loss: 0.6463 - accuracy: 0.6266 - val_loss: 0.6551 - val_accuracy: 0.6038\n",
       "Epoch 19/50\n",
-      "120/120 [==============================] - 0s 482us/step - loss: 0.6475 - accuracy: 0.6198 - val_loss: 0.6454 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 468us/step - loss: 0.6451 - accuracy: 0.6232 - val_loss: 0.6456 - val_accuracy: 0.6394\n",
       "Epoch 20/50\n",
-      "120/120 [==============================] - 0s 468us/step - loss: 0.6476 - accuracy: 0.6248 - val_loss: 0.6467 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 1ms/step - loss: 0.6477 - accuracy: 0.6251 - val_loss: 0.6483 - val_accuracy: 0.6090\n",
       "Epoch 21/50\n",
-      "120/120 [==============================] - 0s 472us/step - loss: 0.6467 - accuracy: 0.6253 - val_loss: 0.6450 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 486us/step - loss: 0.6460 - accuracy: 0.6293 - val_loss: 0.6464 - val_accuracy: 0.6195\n",
       "Epoch 22/50\n",
-      "120/120 [==============================] - 0s 471us/step - loss: 0.6458 - accuracy: 0.6217 - val_loss: 0.6450 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 469us/step - loss: 0.6458 - accuracy: 0.6253 - val_loss: 0.6484 - val_accuracy: 0.6090\n",
       "Epoch 23/50\n",
-      "120/120 [==============================] - 0s 482us/step - loss: 0.6466 - accuracy: 0.6203 - val_loss: 0.6452 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 467us/step - loss: 0.6456 - accuracy: 0.6259 - val_loss: 0.6444 - val_accuracy: 0.6394\n",
       "Epoch 24/50\n",
-      "120/120 [==============================] - 0s 473us/step - loss: 0.6463 - accuracy: 0.6272 - val_loss: 0.6448 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 837us/step - loss: 0.6462 - accuracy: 0.6224 - val_loss: 0.6460 - val_accuracy: 0.6195\n",
       "Epoch 25/50\n",
-      "120/120 [==============================] - 0s 474us/step - loss: 0.6460 - accuracy: 0.6269 - val_loss: 0.6527 - val_accuracy: 0.6090\n",
+      "120/120 [==============================] - 0s 471us/step - loss: 0.6453 - accuracy: 0.6251 - val_loss: 0.6492 - val_accuracy: 0.6090\n",
       "Epoch 26/50\n",
-      "120/120 [==============================] - 0s 468us/step - loss: 0.6461 - accuracy: 0.6274 - val_loss: 0.6448 - val_accuracy: 0.6394\n",
+      "120/120 [==============================] - 0s 468us/step - loss: 0.6463 - accuracy: 0.6261 - val_loss: 0.6443 - val_accuracy: 0.6394\n",
       "Epoch 27/50\n",
-      "120/120 [==============================] - 0s 479us/step - loss: 0.6462 - accuracy: 0.6256 - val_loss: 0.6440 - val_accuracy: 0.6394\n",
+      "120/120 [==============================] - 0s 1ms/step - loss: 0.6473 - accuracy: 0.6266 - val_loss: 0.6494 - val_accuracy: 0.6090\n",
       "Epoch 28/50\n",
-      "120/120 [==============================] - 0s 879us/step - loss: 0.6460 - accuracy: 0.6235 - val_loss: 0.6447 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 494us/step - loss: 0.6454 - accuracy: 0.6214 - val_loss: 0.6443 - val_accuracy: 0.6394\n",
       "Epoch 29/50\n",
-      "120/120 [==============================] - 0s 478us/step - loss: 0.6459 - accuracy: 0.6224 - val_loss: 0.6440 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 467us/step - loss: 0.6457 - accuracy: 0.6222 - val_loss: 0.6479 - val_accuracy: 0.6195\n",
       "Epoch 30/50\n",
-      "120/120 [==============================] - 0s 466us/step - loss: 0.6459 - accuracy: 0.6266 - val_loss: 0.6438 - val_accuracy: 0.6394\n",
+      "120/120 [==============================] - 0s 481us/step - loss: 0.6458 - accuracy: 0.6256 - val_loss: 0.6459 - val_accuracy: 0.6195\n",
       "Epoch 31/50\n",
-      "120/120 [==============================] - 0s 474us/step - loss: 0.6462 - accuracy: 0.6253 - val_loss: 0.6471 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 462us/step - loss: 0.6454 - accuracy: 0.6266 - val_loss: 0.6454 - val_accuracy: 0.6195\n",
       "Epoch 32/50\n",
-      "120/120 [==============================] - 0s 473us/step - loss: 0.6449 - accuracy: 0.6259 - val_loss: 0.6440 - val_accuracy: 0.6394\n",
+      "120/120 [==============================] - 0s 487us/step - loss: 0.6453 - accuracy: 0.6253 - val_loss: 0.6471 - val_accuracy: 0.6195\n",
       "Epoch 33/50\n",
-      "120/120 [==============================] - 0s 474us/step - loss: 0.6455 - accuracy: 0.6287 - val_loss: 0.6459 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 509us/step - loss: 0.6457 - accuracy: 0.6274 - val_loss: 0.6455 - val_accuracy: 0.6195\n",
       "Epoch 34/50\n",
-      "120/120 [==============================] - 0s 469us/step - loss: 0.6456 - accuracy: 0.6269 - val_loss: 0.6473 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 1ms/step - loss: 0.6451 - accuracy: 0.6259 - val_loss: 0.6481 - val_accuracy: 0.6195\n",
       "Epoch 35/50\n",
-      "120/120 [==============================] - 0s 475us/step - loss: 0.6458 - accuracy: 0.6251 - val_loss: 0.6444 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 651us/step - loss: 0.6460 - accuracy: 0.6259 - val_loss: 0.6446 - val_accuracy: 0.6195\n",
       "Epoch 36/50\n",
-      "120/120 [==============================] - 0s 471us/step - loss: 0.6458 - accuracy: 0.6238 - val_loss: 0.6463 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 489us/step - loss: 0.6458 - accuracy: 0.6243 - val_loss: 0.6484 - val_accuracy: 0.6195\n",
       "Epoch 37/50\n",
-      "120/120 [==============================] - 0s 468us/step - loss: 0.6455 - accuracy: 0.6256 - val_loss: 0.6439 - val_accuracy: 0.6394\n",
+      "120/120 [==============================] - 0s 470us/step - loss: 0.6452 - accuracy: 0.6209 - val_loss: 0.6439 - val_accuracy: 0.6195\n",
       "Epoch 38/50\n",
-      "120/120 [==============================] - 0s 471us/step - loss: 0.6454 - accuracy: 0.6232 - val_loss: 0.6438 - val_accuracy: 0.6394\n",
+      "120/120 [==============================] - 0s 503us/step - loss: 0.6453 - accuracy: 0.6261 - val_loss: 0.6438 - val_accuracy: 0.6394\n",
       "Epoch 39/50\n",
-      "120/120 [==============================] - 0s 472us/step - loss: 0.6455 - accuracy: 0.6251 - val_loss: 0.6473 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 490us/step - loss: 0.6455 - accuracy: 0.6264 - val_loss: 0.6456 - val_accuracy: 0.6195\n",
       "Epoch 40/50\n",
-      "120/120 [==============================] - 0s 495us/step - loss: 0.6449 - accuracy: 0.6259 - val_loss: 0.6468 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 481us/step - loss: 0.6452 - accuracy: 0.6256 - val_loss: 0.6441 - val_accuracy: 0.6195\n",
       "Epoch 41/50\n",
-      "120/120 [==============================] - 0s 470us/step - loss: 0.6455 - accuracy: 0.6277 - val_loss: 0.6480 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 1000us/step - loss: 0.6453 - accuracy: 0.6256 - val_loss: 0.6449 - val_accuracy: 0.6195\n",
       "Epoch 42/50\n",
-      "120/120 [==============================] - 0s 489us/step - loss: 0.6453 - accuracy: 0.6269 - val_loss: 0.6460 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 773us/step - loss: 0.6458 - accuracy: 0.6269 - val_loss: 0.6477 - val_accuracy: 0.6195\n",
       "Epoch 43/50\n",
-      "120/120 [==============================] - 0s 517us/step - loss: 0.6454 - accuracy: 0.6259 - val_loss: 0.6442 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 607us/step - loss: 0.6457 - accuracy: 0.6253 - val_loss: 0.6445 - val_accuracy: 0.6195\n",
       "Epoch 44/50\n",
-      "120/120 [==============================] - 0s 502us/step - loss: 0.6459 - accuracy: 0.6261 - val_loss: 0.6441 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 509us/step - loss: 0.6452 - accuracy: 0.6251 - val_loss: 0.6444 - val_accuracy: 0.6195\n",
       "Epoch 45/50\n",
-      "120/120 [==============================] - 0s 499us/step - loss: 0.6450 - accuracy: 0.6259 - val_loss: 0.6442 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 508us/step - loss: 0.6448 - accuracy: 0.6293 - val_loss: 0.6481 - val_accuracy: 0.6195\n",
       "Epoch 46/50\n",
-      "120/120 [==============================] - 0s 461us/step - loss: 0.6455 - accuracy: 0.6256 - val_loss: 0.6474 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 551us/step - loss: 0.6448 - accuracy: 0.6251 - val_loss: 0.6481 - val_accuracy: 0.6195\n",
       "Epoch 47/50\n",
-      "120/120 [==============================] - 0s 473us/step - loss: 0.6455 - accuracy: 0.6261 - val_loss: 0.6458 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 514us/step - loss: 0.6457 - accuracy: 0.6238 - val_loss: 0.6471 - val_accuracy: 0.6195\n",
       "Epoch 48/50\n",
-      "120/120 [==============================] - 0s 472us/step - loss: 0.6453 - accuracy: 0.6259 - val_loss: 0.6450 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 1ms/step - loss: 0.6456 - accuracy: 0.6240 - val_loss: 0.6459 - val_accuracy: 0.6195\n",
       "Epoch 49/50\n",
-      "120/120 [==============================] - 0s 483us/step - loss: 0.6456 - accuracy: 0.6240 - val_loss: 0.6462 - val_accuracy: 0.6195\n",
+      "120/120 [==============================] - 0s 511us/step - loss: 0.6455 - accuracy: 0.6256 - val_loss: 0.6442 - val_accuracy: 0.6195\n",
       "Epoch 50/50\n",
-      "120/120 [==============================] - 0s 506us/step - loss: 0.6453 - accuracy: 0.6269 - val_loss: 0.6445 - val_accuracy: 0.6195\n",
-      "64/64 [==============================] - 0s 262us/step - loss: 0.6351 - accuracy: 0.6448\n",
+      "120/120 [==============================] - 0s 464us/step - loss: 0.6453 - accuracy: 0.6264 - val_loss: 0.6454 - val_accuracy: 0.6195\n",
+      "64/64 [==============================] - 0s 259us/step - loss: 0.6350 - accuracy: 0.6448\n",
       "Test Accuracy: 0.64\n"
      ]
     }
